--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -10,6 +10,7 @@
     <input name="email" id="email" required>
     <label for="password">Salasana</label>
     <input type="password" name="password" id="password" required>
+    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
     <input type="submit" value="Kirjaudu sisään">
   </form>
 {% endblock %}
