--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,15 +1,15 @@
 <!doctype html>
-<title>{% block title %}{% endblock %} - Flaskr</title>
+<title>{% block title %}{% endblock %} - Ostoskeskus</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='ostoskeskus.css') }}">
 <nav>
   <h1><a href="/">Ostoskeskus</a></h1>
   <ul>
     {% if g.user %}
-      <li><span>{{ g.user['firstname'] }}</span></li>
-      <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
+      <li><span>{{ g.user["firstname"] }}</span></li>
+      <li><a href="{{ url_for('auth.logout') }}">Kirjaudu ulos</a>
     {% else %}
-      <li><a href="{{ url_for('auth.register') }}">Register</a>
-      <li><a href="{{ url_for('auth.login') }}">Log In</a>
+      <li><a href="{{ url_for('auth.register') }}">Rekisteröidy</a>
+      <li><a href="{{ url_for('auth.login') }}">Kirjaudu sisään</a>
     {% endif %}
   </ul>
 </nav>
