Fixes (incl. CSRF issues) in the cart ordering

--- a/app/templates/cart/receipt.html
+++ b/app/templates/cart/receipt.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+<div class="thanks">Kiitos tilauksestasi! Kuitti ja lasku löytyvät sähköpostistasi.</div>
+
 <div class="list_footer">
     <a href="{{ url_for('ostoskeskus.products') }}">Palaa kauppaan</a>
 </div>
